Fixed wrong background color for listmenu blue theme

--- a/src/main/resources/tornadofx/listmenu.css
+++ b/src/main/resources/tornadofx/listmenu.css
@@ -24,7 +24,7 @@
 
 .list-menu.blue {
     -fx-graphic-fixed-size: 2.5em;
-    -fx-background-color: #3da0e3;
+    -fx-background-color: #1e88cf;
 }
 
 .list-menu.blue .list-item {
